# simsopt

./: .coveragerc  .gitignore  .gitmodules  .ninja_deps  .ninja_log  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  boozmn.nc  build.ninja  cmake_install.cmake  compile_paper  config.h  config.h.in  paper.bib  paper.md  plan.md  pyproject.toml  requirements.txt  run_autopep  run_ruff  run_tests  run_tests_mpi  setup.cfg  setup.py  template.md  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  conda.yml  docker.yml  docs.yml  docs_test.yml  extensive_ci.yaml  extensive_ci.yml  extensive_test.yml  linting.yml  non_simd_tests.yml  non_simd_tests_iss553.yml  singularity.yml  test.yml  tests.yml  tests_iss553.yml  wheel.yml
Codes/: Bcube.py  Bcube_nonVec.py  Bdipole.py  Bgrad.py  CubicMagnetsTest.py  Sym_vs_Num.ipynb  custom_MUSE.py  permanent_magnet_MUSE.py  pms_exact_unitTest.py
GPMOmr_Paper_Code/: .gitignore  macromag_MUSE_AlNiCo_post_processing.py  macromag_MUSE_post_processing.py  paper_00_postprocess_muse_grid.sh  paper_01_muse_no_bt.sh  paper_02_muse_bt.sh  paper_03_gb50uh.sh  paper_04_alnico.sh  permanent_magnet_MUSE.py  permanent_magnet_MUSE_plots.py
ci/: Dockerfile.ubuntu  README.md  entrypoint.sh  singularity.def  test.yml
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmakebuild/: compile_commands.json  profiling
conda.recipe/: conda_build_config.yaml  meta.yaml
cpp/simsgeopp/: curve.cpp  fouriercurve.cpp
docs/: Makefile  README.md  build_docs.sh  requirements.txt
docs/source/: Doxyfile.in  cite.rst  concepts.rst  conf.py  containers.rst  contributing.rst  cpp.rst  docker.rst  example_boozer_finitebeta.rst  example_coils.rst  example_derivative.rst  example_derivatives.rst  example_dipole_arrays.rst  example_dipole_coil_arrays.rst  example_islands.rst  example_permanent_magnets.rst  example_quasiisodynamic.rst  example_quasisymmetry.rst  example_single_stage.rst  example_vmec.rst  example_vmec_only.rst  example_wireframe.rst  fields.rst  geo.rst  getting_started.rst  index.rst  installation.rst  link-roles.py  mhd.rst  modules.rst  mpi.rst  optimizable.rst  overview.rst  problems.rst  publications.rst  shifter.rst  simsopt._core.rst  simsopt.configs.rst  simsopt.core.rst  simsopt.field.rst  (+21 more)
driver/: main.cpp
drivers/: simsoptDriver  simsoptRPCDriver
examples/: .gitignore  1DOF_Garabedian.sp  QAS.py  QH-residues.sp  QH_fixed_resolution  README.md  boozer  boozer_cross_sections  boozmn.nc  cleanup  demo  demo2  dipole_profiling.py  eliminate_magnetic_islands  gpu_tracing_example.py  gradientBasedSurfaceOptimization.ipynb  graph_surf_vol_area.py  input.1DOF_circularCrossSection_varyAxis_targetIota  input.2DOF_vmecOnly_targetIotaAndVolume  input.nfp2_QA  input.nfp2_QA_iota0.4_withIslands  input.nfp4_QH_warm_start  just_a_quadratic  logger_example.py  minimize_curve_length  minimize_curve_length.ipynb  new_surf_vol_area.py  nfp2_QA_iota0.4_withIslands.sp  optimize_qs.py  optimize_qs_and_islands_simultaneously  optimize_qs_exact.py  optimize_qs_penalty.py  poincare_passing_example.py  qsc  resolution_increase  run_all_examples.sh  run_examples  run_gvec_examples  run_mpi_examples  run_parallel_examples  (+21 more)
examples/1_Simple/: create_individual_maps.py  external_fieldline.py  graph_surf_vol_area.py  graphtest.py  just_a_quadratic.py  load_curves_and_coils.py  logger_example.py  minimize_curve_length.py  optimize_coil_position_orientation.py  output_new  output_old  output_with_curves_from_coil&current  permanent_magnet_simple.py  qfm.py  stage_two_optimization_minimal.py  surf_vol_area.py  surface_volume_and_area  surface_volume_and_area.py  tracing.py  tracing_fieldline.py  tracing_fieldlines_Hanson_Cary.py  tracing_fieldlines_NCSX.py  tracing_fieldlines_QA.py  tracing_particle.py
examples/2_Intermediate/: A_F_ForceCalcs  A_F_ForceCalcs.cpp  A_F_ForceCalcs.py  A_F_ForceCalcs_OLD.cpp  Abbv_Force_Calcs_Verification.py  B_external_normal.py  B_internal_normal.py  CSX_reduced_coil_length.py  CubeForces.py  Iterative_Forces_Verification.py  MUSERS_dip_vs_exact.py  MUSE_edit.py  MatrixForcesTest.py  NCSX_psc_example.py  PM4StellRS_dip_vs_exact.py  QAS.py  QA_fixed_resolution.py  QA_fixed_resolution_jax.py  QA_psc.py  QA_psc_GPMO.py  QA_psc_example.py  QA_psc_joint_optimization.py  QA_psc_restricted_angle_scan.py  QA_wp_example.py  QH_fixed_resolution  QH_fixed_resolution.py  QH_fixed_resolution_boozer.py  QH_fixed_resolution_boozer_jax.py  QH_fixed_resolution_jax.py  QH_psc_example.py  QSC.py  Test.py  TestForces.py  Test_integral.py  boozer.py  boozerQA.py  boozerQA_finitebeta.py  boozerQA_ls_mpi.py  boozerQI.py  bulkGPMO.py  (+129 more)
examples/3_Advanced/: QA_1TF_minimal.py  QA_debug.py  QA_minimal.py  QA_reactorScale_dipoleArrays.py  QA_reactorScale_nodipoles.py  (+42 more)
output/: biot_savart_opt.json  curves_force.vtu  curves_init.vtu  curves_opt_force_4_coils_force_weight_0.vtu  curves_opt_force_WEIGHT=0.0.vtu  curves_opt_force_WEIGHT=1e-07.vtu  curves_opt_force_WEIGHT=1e-08.vtu  curves_opt_force_WEIGHT=1e-09.vtu  curves_opt_force_WEIGHT=1e-10.vtu  curves_opt_force_WEIGHT=1e-14.vtu  curves_opt_force_WEIGHT=1e-15.vtu  curves_opt_force_WEIGHT=1e-16.vtu  curves_opt_force_WEIGHT=1e-17.vtu  curves_opt_force_WEIGHT=1e-20.vtu  curves_opt_long.vtu  curves_opt_short.vtu  surf_init.vts  surf_opt_4_coils_force_weight_0.vts  surf_opt_force_WEIGHT=0.0.vts  surf_opt_force_WEIGHT=1e-07.vts  surf_opt_force_WEIGHT=1e-08.vts  surf_opt_force_WEIGHT=1e-09.vts  surf_opt_force_WEIGHT=1e-10.vts  surf_opt_force_WEIGHT=1e-14.vts  surf_opt_force_WEIGHT=1e-15.vts  surf_opt_force_WEIGHT=1e-16.vts  surf_opt_force_WEIGHT=1e-17.vts  surf_opt_force_WEIGHT=1e-20.vts  surf_opt_long.vts  surf_opt_short.vts
patches/: simsopt_ppc.patch
profiling/: profiling.cpp
simsopt/: __init__.py  collect_dofs.py  dofs.py  finite_difference.py  functions.py  least_squares_problem.py  least_squares_term.py  mpi.py  optimizable.py  rosenbrock.py  shape.py  surface.py  target.py  util.py
tests/: README.md  fort.9  verify_MPI_not_initialized.py
(+1210 files in other folders)
