[build-system]
requires = ["setuptools>=45", "wheel", "oldest-supported-numpy", "cmake", "ninja", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools_scm]

[tool.ruff]
src = ["src/simsopt"] 
ignore = ["E226","E265","E266","E4","E501","E701","E702","E712","E722","E731","E741","F403","F405","F406","W5"]
extend-exclude = ["thirdparty"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402","F401"]
"src/simsopt/field/magneticfieldclasses.py" = ["E743"]
"src/simsopt/mhd/bootstrap.py" = ["F841"]
"tests/verify_MPI_not_initialized.py" = ["F401"]
"tests/geo/test_plot.py" = ["F401"]
"tests/geo/test_curve.py" = ["F401"]

