[metadata]
name = simsopt
description: Framework for optimizing stellarators
long-description = file: README.md
long-description_content_type = text/markdown
version = 0.2.03
license = GNU Lesser General Public License Version 3
license_files = COPYING, COPYING.LESSER
author = "Matt Landreman, Florian Wechsung, Bharat Medasani"
author_email = mattland@umd.edu, wechsung@nyu.edu, mbkumar@gmail.com
maintainer = "Bharat Medasani"
maintainer_email = mbkumar@gmail.com
url = https://github.com/hiddenSymmetries/simsopt
download_url = https://test.pypi.org/project/simsopt
project_urls = 
    Bug Tracker = https://github.com/hiddenSymmetries/simsopt/issues
    Documentation = https://simsopt.readthedocs.io
    Source Code = https://github.com/hiddenSymmetries/simsopt/archive/master.zip
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    plasma physics
    plasma
    magnetohydrodynamics
    mhd
    nuclear fusion reactor
    fusion
    stellarator
    vmec
    spec
    optimization
    Biot-Savart
    magnetostatics

[options]
install_requires = 
    numpy >= v1.19.0
    jax >= 0.2.4
    jaxlib >= 0.1.56
    scipy >= 1.5.4
    Deprecated >= 1.2.10
    nptyping >= 1.3.0
    pandas >= 1.1.4
    ruamel.yaml
    importlib_metadata; python_version < "3.8"
package_dir =
    =src
packages = find:

[options.extras_require]
SPEC =
    py_spec >= 3.0.1
    pyoculus >= 0.1.1
    h5py >= 3.1.0
    f90nml >= 1.2
MPI =
    mpi4py >= 3.0.3

[options.packages.find]
where = src

[options.package_data]
* =
    input.default
    defaults.sp
    log_config.yaml
